--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "<module 'my_functions' from '/home/arthur/projetos/DSBD/artigo/my_functions.py'>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4634,7 +4634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -4668,20 +4668,20 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>244.28</td>\n",
+       "      <td>242.08</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>396.99</td>\n",
+       "      <td>394.6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Model Name     MAE  MAPE    RMSE\n",
-       "0  Random Forest  244.28   0.1  396.99"
+       "      Model Name     MAE  MAPE   RMSE\n",
+       "0  Random Forest  242.08   0.1  394.6"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4699,7 +4699,7 @@
     "data_test['prediction'] = y_pred\n",
     "data_test['error'] = data_test['valor_total'] - data_test['prediction']\n",
     "\n",
-    "utils.save_picked_file(file=best_model, name='best_model')\n",
+    "utils.save_picked_file(file=best_model, name='preparation/best_model')\n",
     "utils.ml_error('Random Forest', y_real, y_pred).round(2)"
    ]
   },
